Fixed overlapping text issue when div width was too narrow using CSS

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ h1 {
 .city {
   color: #878787;
   margin-top: 15px;
+  font-size: 1.8em;
 }
 
 .temp {
@@ -56,7 +57,8 @@ h1 {
   line-height: 0.5;
   font-weight: bold;
   color: #878787;
-  padding-left: 20px;
+  padding-left: 10px;
+  line-height: 0.9;
 }
 
 .bottom {
